Temporal - Creación de compensaciones

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-    <title>Consultas geográficas · Biotablero</title>
+    <title>Biotablero</title>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this app / Habilita JavaScript para ejecutar esta aplicación
     </noscript>
     <div id="root"></div>
   </body>
