Testing projects layers

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head><!--
-    Consultas geográficas :: Biotablero
+    :: BioTablero ::
     Instituto Humboldt - http://www.humboldt.org.co/es/
     Colombia, 2018
   -->
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-    <title>Biotablero</title>
+    <title>BioTablero</title>
   </head>
   <body>
     <noscript>
