--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css"/>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B1M67P31S5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-B1M67P31S5');
+    </script>
+
     <title>BioTablero</title>
   </head>
   <body>
